<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listAsistencia"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imgasistencia"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:padding="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/ista" />

            <LinearLayout
                android:id="@+id/linerTextUbicacionEdificio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/imgasistencia"
                android:layout_toRightOf="@+id/imgasistencia"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/txtvapellidosasistencia"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="TextView"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/txtvnombresasistencia"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="TextView"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">


                    <Button
                        android:id="@+id/btnasisteasistencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/txt_btnAsiste"
                        android:textSize="10dp"
                        app:backgroundTint="#136A16" />

                    <Button
                        android:id="@+id/btnnoasisteasistencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/txt_btnNoAsiste"
                        android:textSize="10dp"
                        app:backgroundTint="#F44336" />

                    <Button
                        android:id="@+id/btnobservacionesasistencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/txt_btnObservaciones"
                        android:textSize="8dp"
                        app:backgroundTint="#FFC107" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>